Bug 51777 - FILEOPEN particular .HTML: 1 twip double borders lossage
Summary: FILEOPEN particular .HTML: 1 twip double borders lossage
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.1 rc
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-07-06 01:38 UTC by Rainer Bielefeld Retired
Modified: 2012-08-22 12:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (8.55 KB, text/html)
2012-07-26 19:10 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-07-06 01:38:55 UTC
Steps how to reproduce [Reproducible] with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: c3dc9a3]" (tinderbox: 2008R2@20, pull time 2012-07-05 08:52:02):

1. Download / Open attached "sample360Beta2.html"
   Expected: table borders shown around words "Table"
   Actual: no table borders visible

Please also compare PDF exports from 3.6.0.0.beta2 and Master

Borders are not lost, if you save document under new name from Master and open with 3.6.0.0.beta borders still are visible.

This is not a general problem, works with a Writer document created from the scratch and saved as .html

Worked fine at least until  Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 3985521]" (tinderbox: W2008R2@16-minimal_build, pull time 2012-06-24)
Comment 1 Rainer Bielefeld Retired 2012-07-26 19:10:02 UTC
Created attachment 64752 [details]
Sample Document
Comment 2 Rainer Bielefeld Retired 2012-07-26 20:33:00 UTC
Still  [Reproducible] with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 66e4540]" (tinderbox:Win-x86@6, pull time 2012-07-26 02:09:47), so NEW
Comment 3 Not Assigned 2012-08-21 22:39:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=601bfe2ce3113719b2f8edaba2ccb6b630051a9a

fdo#51777: add a hack for 1 twip DOUBLE borders:
Comment 4 Michael Stahl 2012-08-22 09:18:57 UTC
was a regression from my border width refactoring, the width 1 of the double 3 border lines is now divided by 3 and rounded to 0 which means the darn thing disappears; a width of 1 twip for a double border doesn't really make sense because it's just too thin but older versions wrote these so i guess they should be displayed...
Comment 5 Not Assigned 2012-08-22 12:11:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a7a6e3b72d23e7068238953670b6a0bf82ef1243&g=libreoffice-3-6

fdo#51777: add a hack for 1 twip DOUBLE borders:


It will be available in LibreOffice 3.6.2.