fdo#51777: add a hack for 1 twip DOUBLE borders:

Arguably such annoyingly thin double borders don't make much sense
anyway, because they're essentially 2 hairlines with ~no space between,
but unfortunately older LO versions are able to create them;
since the refactoring in 2d045cdb69176b280812dda0b813371cf1ac72e2,
which changed the BorderWidthImpl::Get* methods to return 0 due to
rounding, they were ignored at least in the HTML import, which is a
regression.
So add a special purpose hack that essentially rounds up the first line
to 1 but not the other lines so the visual result is a hairline single
border.

Change-Id: I20ac4675bcf67ea58a6931a40bff3605390e9c0d